# HISPMD

./: .env  .example.env  .gitignore  .gitmodules  .htaccess  Dockerfile  LICENSE  README.md  composer.json  dev-docker-compose.yml  docker-compose.yml  docs-docker-compose.yml  files-docker-compose.yml  index.php  init.sql  mato-docker-compose.yml  mkdocs.yml  port-docker-compose.yml  port.Dockerfile  prod-docker-compose.yml  ranch-docker-compose.yml  requirements.txt  server.html  sysdb.php  traefik-docker-compose.yml
ai/: chatbot.php  docker-compose.yml  watcher.py
ai/bots/: .env.sample  README.md  app.py  pyproject.toml  requirements.txt
ai/bots/.streamlit/: config.toml
ai/bots/certs/: fullchain.pem
api/: 1.php  api.js  datasources.php  index.php  send_support_email.php  test.php
app/: MFROperationalDB.php  admin_comments_edit.php  admin_comments_list.php  admin_comments_search.php  admin_members_list.php  admin_members_search.php  admin_rights_list.php  admin_rights_search.php  admin_users_add.php  admin_users_edit.php  admin_users_import.php  admin_users_list.php  admin_users_print.php  admin_users_search.php  admin_users_view.php  ai_data_assistant_list.php  ai_data_assistant_search.php  autofillfields.php  buttonhandler.php  changepwd.php  chat_history_add.php  chat_history_edit.php  chat_history_export.php  chat_history_import.php  chat_history_list.php  chat_history_print.php  chat_history_search.php  chat_history_view.php  dataquality_add.php  dataquality_edit.php  dataquality_export.php  dataquality_import.php  dataquality_list.php  datause_add.php  (+677 more)
(+4584 files in other folders)
